fixing the class separation